# minos_dockerimage

./: AUTHORS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
