[tool.poetry]
name = "default"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
minos-microservice-common = "^0.1.15"
minos-microservice-networks = ">=0.0.18<0.1"
minos-microservice-saga = ">=0.0.12<0.1"
minos-microservice-cqrs = ">=0.0.5<0.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"
